--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "forest-fire-spread": "file:",
     "sass-embedded": "^1.86.3",
-    "vue": "^3.5.13",
-    "vue-facing-decorator": "^3.0.4"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
